﻿EQExtractor2 Changelog. All changes since the 1.0 release.

==06/26/2010==
Derision: Removed the need to duplicate certain methods when deriving a new decoder.

==06/25/2010==
Derision: Added support for current Test Server version (only PP length appears to have changed, no OPCode changes).

==06/12/2010==

Derision: Updated version to 2.0 SVN
Derision: Fixed a bug in GenerateZoneSQL where it was using the ZoneID from the NewZone packet rather than from the PP.

------------------------------------------------------------------------------------------------------------
==06/11/2010==

More refactoring. Should be possible to support .pcaps generated from mulitple client versions.
Refactoring and cleanup about as done as I can be bothered to before releasing the source :)

Merchant items that have a quantity other than -1 (mostly player sold items) are included in the SQL, but commented out.

==06/10/2010==

More refactoring.

==06/08/2010==

More refactoring.
Began to move code that may change with EQClient patch versions out into a separate class to allow easier handling of new patches.

==06/07/2010==

Changed GenerateSpawnsSQL to use BitConverter instead of memory streams;
Refactored some code.

Initial implementation of ByteStream class.

==06/06/2010==

For doors of opentype 57 and 58 (ports), the destination zone and coordinates are populated in the doors table, if a matching
zone point exists with the door param of that door. Doortype 57 is also changed to 58 if a matching zp is found.

Processing a capture file which was started while already in a zone and then zoning *should* now process packets for the
second zone correctly.

Released as version 1.9

==06/05/2010==

Reset expected sequence numbers when switching streams.


==06/05/2010==

Permalocked onto stream using C->S OP_ZoneEntry to reduce chance of multi-boxing messing the collect up.
Version clause is appended to query when updating existing npc_types.